...
const withSceneDelegateSource = (config) =>
	withXcodeProject(config, (config) => {
		const { projectName } = config.modRequest;
		config.modResults = IOSConfig.XcodeUtils.addBuildSourceFileToGroup({
			filepath: `${projectName}/${SCENE_DELEGATE}`,
			groupName: projectName,
			project: config.modResults,
		});
		return config;
	});

module.exports = (config) =>
	withPlugins(config, [
...
